--- a/src/static/style.css
+++ b/src/static/style.css
@@ -56,6 +56,7 @@ textarea {
   font-size: 20px;
 }
 
+button,
 input[type="submit"] {
   background-color: #333;
   color: #fff;
@@ -63,6 +64,7 @@ input[type="submit"] {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
+  margin:5px
 }
 
 .error {
