--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,6 +20,10 @@
     <form method="POST">
       <textarea name="query_text" rows="5" placeholder="SELECT * FROM Hospital;">{% if query_text %}{{ query_text }}{% endif %}</textarea>
       <br />
+      {% for text, query in query_dict.items() %}
+        <button type="button" onclick="document.getElementsByName('query_text')[0].value = `{{ query }}`">{{ text }}</button>
+      {% endfor %}
+      <br />
       <input type="submit" value="Execute" />
     </form>
     {% if error %}
