--- a/src/static/style.css
+++ b/src/static/style.css
@@ -52,11 +52,11 @@ form {
 
 textarea {
   padding: 10px;
-  width: 80%;
+  width: 100%;
   font-size: 20px;
 }
 
-button,
+/* button,
 input[type="submit"] {
   background-color: #333;
   color: #fff;
@@ -64,7 +64,36 @@ input[type="submit"] {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  margin:5px
+  margin: 5px;
+} */
+
+button,
+input[type="submit"] {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #333;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+button:hover,
+input[type="submit"]:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible,
+input[type="submit"]:focus,
+input[type="submit"]:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+input[type="submit"] {
+  margin-top: 5px;
 }
 
 .error {
@@ -73,8 +102,12 @@ input[type="submit"] {
 }
 
 table {
+  display: block;
   border-collapse: collapse;
   margin-top: 20px;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 th,
@@ -87,4 +120,9 @@ td {
 th {
   background-color: #333;
   color: #fff;
+}
+
+.content {
+  margin: auto;
+  width: 80%;
 }
