--- a/src/static/style.css
+++ b/src/static/style.css
@@ -16,6 +16,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 nav {
   background-color: #333;
   color: #fff;
@@ -29,6 +33,11 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
+}
+
+body {
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 nav li {
@@ -54,18 +63,8 @@ textarea {
   padding: 10px;
   width: 100%;
   font-size: 20px;
+  resize: vertical;
 }
-
-/* button,
-input[type="submit"] {
-  background-color: #333;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 5px;
-} */
 
 button,
 input[type="submit"] {
