--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospital Database</title>
+    <meta charset="UTF-8" />
     <link rel="shortcut icon" href="#">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <title>Hospital Database</title>
   </head>
   <body>
     <nav>
